fix: update docker base image para eclipse-temurin